@@ -1,0 +1,11 @@
+﻿<?php
+/**
+ * The permissions German Poll lexicon entries
+ *
+ * @package polls
+ * @subpackage lexion
+ */
+
+$_lang['perm.manage_polls'] = "Verwalten Sie alle Umfragen Einträge";
+
+?>
