@@ -1,0 +1,11 @@
+﻿<?php
+/**
+ * The permissions English Poll lexicon entries
+ *
+ * @package polls
+ * @subpackage lexion
+ */
+
+$_lang['perm.manage_polls'] = "Manage all Polls entries";
+
+?>
