@@ -1,4 +1,4 @@
-<?php
+﻿<?php
 $_lang['polls'] = 'Опросы';
 $_lang['polls.manage'] = 'Управление опросами';
 $_lang['polls.desc'] = 'Управление категориями опросов, вопросами и ответами.';
