@@ -1,4 +1,4 @@
-<?php
+﻿<?php
 $_lang['polls.totalvotes'] = 'Всего голосов: [[+num]]';
 $_lang['polls.vote'] = 'Голосовать!';
 $_lang['polls.votedon'] = 'Вы уже голосовали [[+date]] в [[+time]]!';
