@@ -1,0 +1,11 @@
+﻿<?php
+/**
+ * The permissions Russian Poll lexicon entries
+ *
+ * @package polls
+ * @subpackage lexion
+ */
+
+$_lang['perm.manage_polls'] = "Управление всеми Опросы записей";
+
+?>
